--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8">
     <title>Arwin Espiritu</title>
@@ -12,13 +12,13 @@
     <h1>ARWIN JOCSON ESPIRITU</h1>
     <div id="Prof-Container">
       <span><img id="profPic" src="images/Profilepic.png"></span>
-      <div class="Details">
-        <p>Professional Electronics Technician</p>
-        <p>WEB Designer</p>
-        <p>Former System Engineer</p>
-        <p>Computer literate</p>
-        <p>Troubleshooting Expert</p>
-      </div>
+      <ul>
+        <li>PROFESSIONAL ELECTRONICS TECHNICIAN</li>
+        <li>WEB DESIGNER</li>
+        <li>FORMER SYSTEM ENGINEER</li>
+        <li>TROUBLESHOOTING EXPERT</li>
+        <li>COMPUTER LITERATE</li>
+      </ul>
     </div>
     <div class="bholecont">
       <span id="gmailacc">
